--- a/public/unauthorized.html
+++ b/public/unauthorized.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expired</title>
+    <title>Unauthorized</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,8 +42,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Expired...</h1>
-        <p>Deze Link is helaas niet langer geldig.</p>
+        <h1>Unauthorized</h1>
+        <p>You are not authorized to access this resource.</p>
         <p><a href="/">Return to Home</a></p>
     </div>
 </body>
